# smna

./: README.md  config_smg.ksh
SMG/: compile.out  config_smg.ksh
SMG/cptec/bam/model/source/Physics/Convection/CloudFraction/UKMET/: calcloudcover.mod
SMG/cptec/bam/model/source/Physics/Convection/MicroPhysics/MORRISON_AERO/: micro_morr.mod
SMG/cptec/bam/model/source/Physics/Radiation/Clirad/: Rad_CliRadLW.f90
SMG/cptec/bam/pos/source/: Makefile
SMG/cptec/bam/pos/source/makefiles/: Makefile.gnu_cray
SMG/cptec/bam/pos/source/w3lib-1.4/: bacio_module.opt  baciof.cg  errexit.cg  errmsg.cg  errmsg.opt  fparsei.cg  fparsei.opt  gbytes_char.cg  gbytes_char.opt  getbit.cg  getbit.opt  getgb.cg  getgb.opt  getgb1r.cg  getgb1re.opt  getgb1s.cg  getgb1s.opt  getgbe.cg  getgbe.opt  getgbeh.cg  getgbem.opt  getgbemp.cg  getgbemp.opt  getgbens.cg  getgbens.opt  getgbep.cg  getgbep.opt  getgbex.cg  getgbex.opt  getgbexm.cg  getgbexm.opt  getgbh.cg  getgbm.cg  getgbm.opt  getgbmh.cg  getgbmp.cg  getgbp.cg  getgbp.opt  getgi.opt  getgir.cg  (+64 more)
SMG/cptec/bam/pre/sources/: Mod_Albedo.f90
SMG/cptec/bam/run/: EnvironmentalVariables  MODELIN.das  MODELIN.default  PRE_cfg.nml_oz  runModel  runPos  runPre  runPre.func  runPre.nml  run_cycle.sh
SMG/cptec/gsi/: clean
SMG/cptec/gsi/arch/: Config.pl  configure.defaults
SMG/cptec/gsi/fix/: global_angupdate.nml  global_convinfo.txt  global_satinfo.txt  gsiparm.anl  gsiparm.anl.cold  obsfiles.rc
SMG/cptec/gsi/run/: run_gsi_global.ksh  run_gsi_regional.ksh
SMG/cptec/gsi/src/libs/bramsIO/: BRAMSMod.f90  Makefile-objs  ModConstants.f90
SMG/cptec/gsi/src/libs/crtm_2.1.3/: Makefile
SMG/cptec/gsi/src/libs/sigioBAMMod/: Makefile  Makefile-deps  Makefile-objs  Makefile.gnu  sigio_BAMMod.F90
SMG/cptec/gsi/src/libs/sp/: Makefile
SMG/cptec/gsi/src/libs/w3nco_v2.0.6/: Makefile
SMG/cptec/gsi/src/main/: Makefile-deps  Makefile-objs  Makefile.dependency  antest_maps0.f90  constants.f90  control_vectors.f90  correlated_obsmod.F90  cptecbam_io.F90  cptecbrams_io.F90  get_wrf_mass_ensperts_netcdf.F90  getprs.f90  gsi_bundlemod.F90  gsi_chemguess_mod.F90  gsimod.F90  gsisub.F90  guess_grids.F90  intall.f90  m_rerank.f90  m_uniq.f90  makefile_DTC  mod_vtrans.f90  obsmod.F90  oneobmod.F90  plib8.f90  projmethod_support.f90  read_bamfiles.f90  read_brams_files.f90  read_guess.F90  read_prepbufr.f90  read_satwnd.f90  satthin.F90  stpcalc.f90  tendsmod.f90  wind_fft.f90  write_all.F90
SMG/cptec/gsi/src/main/enkf/: inflation.f90  readsatobs.f90
SMG/cptec/gsi/util/Analysis_Utilities/read_diag/: makefile
SMG/cptec/gsi/util/bufr_tools/: makefile
SMG/cptec/gsi/util/gsi_angupdate/: kinds.F90  read_diag.f90  run_gsi_angupdate.ksh
SMG/etc/: __helpers__.sh  __init__.sh  functions.sh  paths.conf  smg_setup.sh
SMG/etc/mach/: XC50_paths.conf  egeon_paths.conf
SMG/run/: README  __init__.sh  run_cycle-oper.sh  run_cycle.sh  run_fcst.sh
SMG/run/scripts/: __init__.sh  runGSI  run_BAM_fcst.sh  run_blsdas.sh  run_gsi.sh  run_model.sh  run_model_fct.sh  run_obsmake.sh
SMG/run/scripts/bam_scripts/: EnvironmentalVariables  PRE_cfg.nml_default  PRE_run.nml_default  README  runPre  runPre.func  runPre.nml
SMG/run/scripts/gsi_scripts/: runGSI_Functions.sh
SMG/utils/: check_paths.sh  clean_dist.sh  deploy_smg.sh  git_release_flow.sh  svn_release_flow.sh
SMG/utils/inctime/: Makefile.am  autogen.sh  configure.ac
SMG/utils/inctime/config/: flags.cray  flags.gnu  flags.template
SMG/utils/inctime/libmisc/: Makefile.am  m_string.f90  m_time.f90
SMG/utils/inctime/src/: Makefile.am
SMG/utils/spc2grd/: spc2grd.f90
cptec/bam/model/source/Physics/Convection/MicroPhysics/UKME/: micro_ukme.mod
cptec/bam/model/source/Physics/Radiation/RRTMG/ext/rrtmg_lw/: lw_kgb02.lst  (+12 more)
cptec/bam/pos/source/: PostLoop.f90  RegInterp.f90
cptec/bam/pos/source/w3lib-1.4/: bacio_module.cg  baciof.opt  errexit.opt  fparser.cg  fparser.opt  getgb1r.opt  getgb1re.cg  getgbeh.opt  getgbem.cg  getgbemh.cg  getgbemh.opt  getgbh.opt  getgbmh.opt  getgbmp.opt  getgi.cg  instrument.opt  putgbens.opt  putgbn.cg  r63w72.cg  r63w72.opt  sbytes.opt  w3fi01.opt  w3fi58.cg  w3fi58.opt  w3fi59.cg  w3fi71.cg  w3fi73.opt  w3fi74.cg  w3fi83.cg  w3fi83.opt  w3fs21.cg  w3fs21.opt  w3fs26.cg  w3fs26.opt  w3locdat.cg  w3tagb.opt
cptec/bam/pre/exec/: PRE_cfg.nml  PRE_run.nml  runPre_Tupa  runPre_XC50
cptec/bam/pre/sources/: Mod_FLUXCO2Clima.f90  Mod_Namelist.f90  Mod_Pre.f90  Mod_SSTMonthlyDirec.f90
cptec/bam/pre/sources/Mod_ChoppingParallel/: Mod_Chopping.f90  Mod_Communications.f90  Mod_InputParameters.f90
cptec/bam/run/: EnvironmentalVariables  EnvironmentalVariablesMCGA  MODELIN  MODELIN.template  MODELIN_DAILY  PRE_cfg.nml_default  PRE_run.nml_default  PostGridHistory.nml  namelist.runPre  runModel  runPre  run_cycle.sh  sstmtd.nml_default
cptec/gsi/arch/: postamble
cptec/gsi/fix/: global_anavinfo.l28.txt  global_satinfo.txt  global_scaninfo.txt  gsiparm.anl  obsfiles.rc
cptec/gsi/src/libs/: Makefile
cptec/gsi/src/libs/bramsIO/: Makefile  Makefile-deps  utils_c.c  utils_sub_names.h
cptec/gsi/src/libs/bufr/: Makefile
cptec/gsi/src/libs/crtm_2.1.3/: CRTM_AtmOptics_Define.f90
cptec/gsi/src/libs/w3emc_v2.0.5/: Makefile  mersenne_twister.f  w3fi85.f
cptec/gsi/src/main/: anisofilter.f90  cloud_efr_mod.f90  crtm_interface.f90  derivsmod.f90  fpvsx_ad.f90  gesinfo.f90  get_derivatives.f90  gridmod.F90  gsimain.f90  pcgsoi.f90  radinfo.f90  raflib.f90  read_fl_hdob.f90  read_gps.f90  rtlnmc_version3.f90  state_vectors.f90
cptec/gsi/src/main/enkf/: Makefile.conf  params.f90
cptec/gsi/util/gsi_angupdate/: main.F90  makefile
docs/: BAM_DELTAT.md  Bc.md  OBS_INPUT.md  PostAlt_comp.md  QC_GSI.md  README.md  Read_Prepbufr_Messages.md  SMNA_egeon.md  SMNA_pre-operacional.md  SMNA_v3.0.1.md  paths.md  pcgsoi.md  qc_marker.md
etc/: paths.conf
run/: run_cycle.sh
run/scripts/: runGSI  run_model.sh  run_obsmake.sh
run/scripts/bam_scripts/: MODELIN.template  POSTIN-GRIB  PRE_cfg.nml_das  runModel  runPre  runPre.func  runPre.nml  runPre.orig
tools/: gen_docs_readme.py
(+96 files in other folders)
